Changed reflection to an IDictionary<string, string> instead. Added factory class (and tests) for creating MailMessage objects

--- a/EmailTemplating.Tests/Ciseware.EmailTemplating.Tests.csproj
+++ b/EmailTemplating.Tests/Ciseware.EmailTemplating.Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailTests.cs" />
     <Compile Include="TemplateParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -51,6 +52,11 @@
       <Project>{B98744F5-26A0-479B-9501-9DD8A2D1E540}</Project>
       <Name>Ciseware.EmailTemplating</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Templates\sample-email.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
