--- a/Ciseware.EmailTemplating/Ciseware.EmailTemplating.csproj
+++ b/Ciseware.EmailTemplating/Ciseware.EmailTemplating.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ITemplateParser.cs" />
     <Compile Include="MergedEmailFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemplateParser.cs" />
