Fluent interface, ability to send mixed HTML & Plaintext emails

--- a/EmailTemplating.Tests/Ciseware.EmailTemplating.Tests.csproj
+++ b/EmailTemplating.Tests/Ciseware.EmailTemplating.Tests.csproj
@@ -55,6 +55,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Templates\sample-email.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Templates\sample-email.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
