Big code tidy up

--- a/Alpinely.EmailTemplating.Tests/Alpinely.EmailTemplating.Tests.csproj
+++ b/Alpinely.EmailTemplating.Tests/Alpinely.EmailTemplating.Tests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{5CA1C99F-5742-453D-B2AC-5C42C34DE214}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ciseware.EmailTemplating.Tests</RootNamespace>
-    <AssemblyName>EmailTemplating.Tests</AssemblyName>
+    <RootNamespace>Alpinely.EmailTemplating.Tests</RootNamespace>
+    <AssemblyName>Alpinely.EmailTemplating.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -49,18 +49,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ciseware.EmailTemplating\Ciseware.EmailTemplating.csproj">
-      <Project>{B98744F5-26A0-479B-9501-9DD8A2D1E540}</Project>
-      <Name>Ciseware.EmailTemplating</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Templates\sample-email.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Templates\sample-email.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Alpinely.EmailTemplating\Alpinely.EmailTemplating.csproj">
+      <Project>{B98744F5-26A0-479B-9501-9DD8A2D1E540}</Project>
+      <Name>Alpinely.EmailTemplating</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
