--- a/Alpinely.EmailTemplating/Alpinely.EmailTemplating.csproj
+++ b/Alpinely.EmailTemplating/Alpinely.EmailTemplating.csproj
@@ -2,20 +2,18 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1D8374D9-92A0-4887-A3C5-F40820BE0150}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{B98744F5-26A0-479B-9501-9DD8A2D1E540}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EmailTemplating</RootNamespace>
-    <AssemblyName>EmailTemplating</AssemblyName>
+    <RootNamespace>Alpinely.EmailTemplating</RootNamespace>
+    <AssemblyName>Alpinely.EmailTemplating</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,8 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,8 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ITemplateParser.cs" />
+    <Compile Include="MailMessageWrapper.cs" />
+    <Compile Include="MergedEmailFactory.cs" />
+    <Compile Include="SerializableEntities\SerializeableMailMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializableEntities\SerializeableAlternateView.cs" />
+    <Compile Include="SerializableEntities\SerializeableAttachment.cs" />
+    <Compile Include="SerializableEntities\SerializeableCollection.cs" />
+    <Compile Include="SerializableEntities\SerializeableContentDisposition.cs" />
+    <Compile Include="SerializableEntities\SerializeableContentType.cs" />
+    <Compile Include="SerializableEntities\SerializeableLinkedResource.cs" />
+    <Compile Include="SerializableEntities\SerializeableMailAddress.cs" />
     <Compile Include="TemplateParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
