--- a/Alpinely.EmailTemplating/Alpinely.EmailTemplating.csproj
+++ b/Alpinely.EmailTemplating/Alpinely.EmailTemplating.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ITemplateParser.cs" />
+    <Compile Include="MailMessageExtensions.cs" />
     <Compile Include="MailMessageWrapper.cs" />
     <Compile Include="MergedEmailFactory.cs" />
     <Compile Include="SerializableEntities\SerializeableMailMessage.cs" />
