--- a/Alpinely.EmailTemplating.Tests/Alpinely.TownCrier.Tests.csproj
+++ b/Alpinely.EmailTemplating.Tests/Alpinely.TownCrier.Tests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{5CA1C99F-5742-453D-B2AC-5C42C34DE214}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Alpinely.EmailTemplating.Tests</RootNamespace>
-    <AssemblyName>Alpinely.EmailTemplating.Tests</AssemblyName>
+    <RootNamespace>Alpinely.TownCrier.Tests</RootNamespace>
+    <AssemblyName>Alpinely.TownCrier.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -32,8 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework">
-      <HintPath>..\..\..\Dev\Libraries\NUnit\2.5\bin\net-2.0\framework\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=2.5.5.10112, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Alpinely.EmailTemplating\lib\NUnit\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,9 +59,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Alpinely.EmailTemplating\Alpinely.EmailTemplating.csproj">
+    <ProjectReference Include="..\Alpinely.EmailTemplating\Alpinely.TownCrier.csproj">
       <Project>{B98744F5-26A0-479B-9501-9DD8A2D1E540}</Project>
-      <Name>Alpinely.EmailTemplating</Name>
+      <Name>Alpinely.TownCrier</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
