--- a/Alpinely.EmailTemplating/Alpinely.TownCrier.csproj
+++ b/Alpinely.EmailTemplating/Alpinely.TownCrier.csproj
@@ -52,6 +52,13 @@
     <Compile Include="SerializableEntities\SerializeableMailAddress.cs" />
     <Compile Include="TemplateParser.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="COPYING" />
+    <None Include="COPYING.LESSER" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LICENCE.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
