--- a/Alpinely.TownCrier/Alpinely.TownCrier.csproj
+++ b/Alpinely.TownCrier/Alpinely.TownCrier.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MarkdownSharp">
+      <HintPath>..\Alpinely.EmailTemplating\lib\MarkdownSharp\MarkdownSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
