--- a/Alpinely.TownCrier/Alpinely.TownCrier.csproj
+++ b/Alpinely.TownCrier/Alpinely.TownCrier.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MarkdownSharp">
-      <HintPath>..\Alpinely.EmailTemplating\lib\MarkdownSharp\MarkdownSharp.dll</HintPath>
+      <HintPath>..\packages\MarkdownSharp.1.13.0.0\lib\35\MarkdownSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,6 +43,7 @@
     <Compile Include="ITemplateParser.cs" />
     <Compile Include="MailMessageExtensions.cs" />
     <Compile Include="MailMessageWrapper.cs" />
+    <Compile Include="MarkdownHtmlGenerator.cs" />
     <Compile Include="MergedEmailFactory.cs" />
     <Compile Include="SerializableEntities\SerializeableMailMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -61,6 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENCE.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
